infra/services/observability/portainer/portainer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      containers:
        - name: portainer
          image: portainer/portainer-ce:2.21.4
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 9443
              name: https
          volumeMounts:
            - name: portainer-data
              mountPath: /data
            - name: portainer-certificates
              mountPath: /certs
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: portainer-data
          persistentVolumeClaim:
            claimName: portainer-pvc
        - name: portainer-certificates
          emptyDir: {}
