infra/services/observability/portainer/portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: infra
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
    - port: 9443
      targetPort: 9443
      protocol: TCP
      name: https
  selector:
    app: portainer
